# skywatch

./: .gitignore  README.md  pyproject.toml
docker/: README.md  docker-compose.yml
docker/dumpvdl2/: Dockerfile
pi-feeder/: .env.example  README.md  docker-compose.yml  skywatch.Dockerfile
pi-feeder/docs/: building-image.md
pi-feeder/manager/: Dockerfile  app.py
pi-feeder/manager/static/: styles.css
pi-feeder/manager/templates/: index.html
pi-feeder/scripts/: install.sh
skywatch/: __init__.py  __main__.py
skywatch/airports/: __init__.py  fetch.py  seed.py
skywatch/central/: __init__.py  __main__.py  merger.py
skywatch/db/: __init__.py  algorithmic.py  fetch.py  icao_ranges.py  lookup.py  mictronics.py  operators.py  seed.py  types.py
skywatch/decoder/: __init__.py  adsb.py  beast.py  common.py  modes.py  synthetic.py  vdl2.py
skywatch/edge/: __init__.py  __main__.py  runner.py  spool.py
skywatch/enrich/: __init__.py  route.py
skywatch/server/: __init__.py  app.py  http_server.py  websocket.py
skywatch/state/: __init__.py  aircraft.py  engine.py  receiver.py
skywatch/store/: __init__.py  mongo.py
skywatch/transport/: __init__.py  mongo_changestream.py  websocket_push.py
tests/: test_skywatch.py
tests/fixtures/vdl2/: acars_posrep.json  cpdlc_downlink_wilco.json  cpdlc_uplink.json  link_mgmt_sabm.json  malformed.json
web/: app.js  index.html  style.css
